manifests/normal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-normal
spec:
  selector:
    app: demo-normal
  ports:
    - name: http
      port: 80
      targetPort: 5678
