manifests/normal/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-normal
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - normal.demo.local
  rules:
    - backendRefs:
        - name: demo-normal
          port: 80
